examples/good/12_static_typed.pp
// int main; // error

int main() {
    int a;
    // a = "a"; // error
    // 1 + "1"; // error
    // a = true; // error

    return "0";
}
